[package]
name = "grpc-protobuf-build"
version = "0.10.0"
authors = ["gRPC Authors"]
license = "MIT"
homepage = "https://grpc.io"
repository = "https://github.com/grpc/grpc-rust"
description = "Protobuf build integration for grpc"
readme = "README.md"
keywords = ["rpc", "grpc", "async", "protobuf", "proto"]
categories = ["web-programming", "network-programming", "asynchronous"]
rust-version = { workspace = true }
edition = "2024"

[package.metadata.cargo_check_external_types]
allowed_external_types = ["protobuf_codegen::Dependency"]

[dependencies]
prettyplease = "0.2.35"
protobuf-codegen = { version = "4.34.0-release" }
syn = "2.0.104"
which = "8.0"
protoc-gen-rust-grpc = { version = "0.10.0", path = "../protoc-gen-rust-grpc", optional = true }

[features]
default = ["build-plugin"]
build-plugin = ["dep:protoc-gen-rust-grpc"]

[build-dependencies]
cmake = "0.1"
