[package]
name = "grpc-protobuf"
version = "0.10.0"
authors = ["gRPC Authors"]
license = "MIT"
homepage = "https://grpc.io"
repository = "https://github.com/grpc/grpc-rust"
description = "Protobuf integration for the grpc crate"
readme = "README.md"
keywords = ["rpc", "grpc", "async", "protobuf", "proto"]
categories = ["web-programming", "network-programming", "asynchronous"]
rust-version = { workspace = true }
edition = "2024"

[package.metadata.cargo_check_external_types]
allowed_external_types = [
    "grpc::*",
    "protobuf::*",
]

[features]

[dependencies]
bytes = "1.11.1"
grpc = { version = "0.10.0", path = "../grpc" }
protobuf = "4.34.0-release"

[dev-dependencies]
