[package]
name = "protoc-gen-rust-grpc"
version = "0.10.0"
authors = ["gRPC Authors"]
license = "MIT"
homepage = "https://grpc.io"
repository = "https://github.com/grpc/grpc-rust"
description = "Protobuf plugin to generate gRPC-Rust service bindings"
readme = "README.md"
keywords = ["rpc", "grpc", "async", "protobuf", "proto"]
categories = ["web-programming", "network-programming", "asynchronous"]
rust-version = { workspace = true }
edition = "2024"

[dependencies]

[build-dependencies]
cmake = "0.1"
